--- a/keycloak_build/Dockerfile
+++ b/keycloak_build/Dockerfile
@@ -2,10 +2,10 @@
 
 FROM quay.io/keycloak/keycloak:latest as builder
 
-ENV KC_HEALTH_ENABLED=true
-ENV KC_METRICS_ENABLED=true
-ENV KC_FEATURES=token-exchange
-ENV KC_DB=postgres
+ENV KC_HEALTH_ENABLED=true \
+    KC_METRICS_ENABLED=true \
+    KC_FEATURES=token-exchange \
+    KC_DB=postgres 
 # Install custom providers
 RUN curl -sL https://github.com/aerogear/keycloak-metrics-spi/releases/download/2.5.3/keycloak-metrics-spi-2.5.3.jar -o /opt/keycloak/providers/keycloak-metrics-spi-2.5.3.jar
 RUN /opt/keycloak/bin/kc.sh build --http-relative-path=/keycloak
@@ -15,8 +15,8 @@ COPY --from=builder /opt/keycloak/ /opt/keycloak/
 WORKDIR /opt/keycloak
 
 # This is god: https://keycloak.discourse.group/t/kc-17-quarkus-how-to-disable-https-for-admin-endpoints/14249
-ENV KC_HTTP_ENABLED=true
-ENV KC_HOSTNAME_STRICT=false
-ENV KC_HOSTNAME_STRICT_HTTPS=false
+ENV KC_HTTP_ENABLED=true \
+    KC_HOSTNAME_STRICT=false \
+    KC_HOSTNAME_STRICT_HTTPS=false
 
 ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start"]
